apps/arr-stacks/subsyncarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subsyncarr
  namespace: arr-stacks
  labels:
    name: subsyncarr
    tier: arr-stacks
spec:
  replicas: 1
  revisionHistoryLimit: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: subsyncarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: subsyncarr
        tier: arr-stacks
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: subsyncarr-data
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs
      containers:
        - name: subsyncarr
          image: mrorbitman/subsyncarr:1.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: media
              mountPath: /movies
              subPath: data/media/movies
            - name: media
              mountPath: /tv
              subPath: data/media/tv
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
